// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Multiselect /> renders correctly with all props 1`] = `
<div
  className="form-group"
>
  <label
    className=""
    data-t1="idmultiselectLabel"
    htmlFor="idmultiselect"
  >
    Multiselect field
     
    <div>
      Tooltip
    </div>
  </label>
  <div
    className="input-group"
  >
    <div
      className="input-group-prepend"
    >
      <span
        className="input-group-text"
      >
        Random prefix
      </span>
    </div>
    <select
      aria-invalid={true}
      className="is-invalid form-control"
      data-t1="idmultiselect"
      disabled={false}
      id="idmultiselect"
      multiple={true}
      name="idmultiselect"
      onBlur={[Function]}
      onChange={[Function]}
      value={
        Array [
          4,
        ]
      }
    >
      <option
        value={1}
      >
        1
      </option>
      <option
        value={2}
      >
        2
      </option>
    </select>
    <div
      className="invalid-feedback"
      style={
        Object {
          "display": "block",
        }
      }
    >
      This field i required
    </div>
    <div
      className="input-group-append"
    >
      <span
        className="input-group-text"
      >
        Random prefix
      </span>
    </div>
  </div>
</div>
`;

exports[`<Multiselect /> renders correctly without optional props 1`] = `
<div
  className="form-group"
>
  <label
    className=""
    data-t1="Label"
    htmlFor=""
  >
    
     
  </label>
  <span
    className="ml-3"
  >
    <div>
      test after label
    </div>
  </span>
  <div
    className="input-group"
  >
    <select
      aria-invalid={false}
      className="form-control"
      data-t1=""
      disabled={false}
      id=""
      multiple={true}
      name=""
      onBlur={[Function]}
      onChange={[Function]}
      value={Array []}
    >
      <option
        value={1}
      >
        Option 1
      </option>
      <option
        value={2}
      >
        Option 2
      </option>
    </select>
  </div>
</div>
`;
